# pda

./: .gitignore  CLAUDE.md  batch-mcp-config.json  pda.sh  pyproject.toml
data/: article_type_mapping.yaml  categories.yaml  glossary.yaml  pda.db  pda_research.yaml  section_headings.yaml  taxonomy.yaml
docs/: color-preview-v7.html  decisions.md  design-system.html  featured-articles-plan.md  homepage-mockup-a.html  homepage-mockup-a1.html  homepage-mockup-a2.html  homepage-mockup-a3.html  homepage-mockup-a4.html  homepage-mockup-a5.html  homepage-mockup-b.html  homepage-mockup-c.html  missing-pdfs.txt  schema.md  translation-machine-plan.md  translation-process.md
mcp_server/: __init__.py  database.py  glossary.py  pdf_extraction.py  preprocessing.py  quality_checks.py  server.py  taxonomy.py  tools.py  utils.py
scripts/: batch_extract.py  batch_runner.py  enhance_parsed_article.py  extract_with_datalab.py  init_db.py  migrate_add_extraction_fields.py  migrate_schema.py  migrate_yaml_to_db.py  parse_article_blocks.py  parse_article_structure.py  parse_pda_research.py  test_datalab_fields.py
site/: astro.config.mjs  package-lock.json  package.json
site/src/: middleware.ts
site/src/components/: AnswerCapsule.astro  ArticleCard.astro  CategoryCard.astro  ClassificationBadges.astro  ICPCard.astro  LanguageSwitcher.astro
site/src/i18n/: config.ts  translations.ts
tests/: __init__.py  conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py
training/: has_terminology_2017.md  philippe_contejean_2018.md
(+28 files in other folders)
